src-tauri/check_output_v3.txt
cargo :    Compiling fireworks-collaboration v0.1.0 (C:\Users\34404\Documents\GitHub\fireworks-collaboration\src-tauri)
所在位置 行:1 字符: 1
+ cargo check --lib --tests 2>&1 | Out-File -Encoding UTF8 check_output ...
+ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    + CategoryInfo          : NotSpecified: (   Compiling fi...tion\src-tauri):String) [], RemoteException
    + FullyQualifiedErrorId : NativeCommandError
 
error[E0432]: unresolved import `fireworks_collaboration_lib::core::git::runner::GitOutput`
 --> tests\quality\..\common\mock_runner.rs:2:54
  |
2 | use fireworks_collaboration_lib::core::git::runner::{GitOutput, GitRunner};
  |                                                      ^^^^^^^^^
  |                                                      |
  |                                                      no `GitOutput` in `core::git::runner`
  |                                                      help: a similar name exists in the module: `Output`

error[E0432]: unresolved import `fireworks_collaboration_lib::core::git::runner::GitOutput`
 --> tests\e2e\..\common\mock_runner.rs:2:54
  |
2 | use fireworks_collaboration_lib::core::git::runner::{GitOutput, GitRunner};
  |                                                      ^^^^^^^^^
  |                                                      |
  |                                                      no `GitOutput` in `core::git::runner`
  |                                                      help: a similar name exists in the module: `Output`

error[E0432]: unresolved import `fireworks_collaboration_lib::core::git::runner::GitOutput`
 --> tests\workspace\..\common\mock_runner.rs:2:54
  |
2 | use fireworks_collaboration_lib::core::git::runner::{GitOutput, GitRunner};
  |                                                      ^^^^^^^^^
  |                                                      |
  |                                                      no `GitOutput` in `core::git::runner`
  |                                                      help: a similar name exists in the module: `Output`

error[E0432]: unresolved import `fireworks_collaboration_lib::core::git::runner::GitOutput`
 --> tests\proxy\..\common\mock_runner.rs:2:54
  |
2 | use fireworks_collaboration_lib::core::git::runner::{GitOutput, GitRunner};
  |                                                      ^^^^^^^^^
  |                                                      |
  |                                                      no `GitOutput` in `core::git::runner`
  |                                                      help: a similar name exists in the module: `Output`

error[E0432]: unresolved import `fireworks_collaboration_lib::core::git::runner::GitOutput`
 --> tests\events\..\common\mock_runner.rs:2:54
  |
2 | use fireworks_collaboration_lib::core::git::runner::{GitOutput, GitRunner};
  |                                                      ^^^^^^^^^
  |                                                      |
  |                                                      no `GitOutput` in `core::git::runner`
  |                                                      help: a similar name exists in the module: `Output`

error[E0432]: unresolved import `fireworks_collaboration_lib::core::git::runner::GitOutput`
 --> tests\submodule\mock_tests.rs:2:5
  |
2 | use fireworks_collaboration_lib::core::git::runner::GitOutput;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^---------
  |     |                                               |
  |     |                                               help: a similar name exists in the module: `Output`
  |     no `GitOutput` in `core::git::runner`

error[E0432]: unresolved import `fireworks_collaboration_lib::core::git::runner::GitOutput`
 --> tests\git\..\common\mock_runner.rs:2:54
  |
2 | use fireworks_collaboration_lib::core::git::runner::{GitOutput, GitRunner};
  |                                                      ^^^^^^^^^
  |                                                      |
  |                                                      no `GitOutput` in `core::git::runner`
  |                                                      help: a similar name exists in the module: `Output`

error[E0432]: unresolved import `fireworks_collaboration_lib::core::git::runner::GitOutput`
 --> tests\tasks\..\common\mock_runner.rs:2:54
  |
2 | use fireworks_collaboration_lib::core::git::runner::{GitOutput, GitRunner};
  |                                                      ^^^^^^^^^
  |                                                      |
  |                                                      no `GitOutput` in `core::git::runner`
  |                                                      help: a similar name exists in the module: `Output`

error[E0433]: failed to resolve: could not find `common` in the crate root
 --> tests\submodule\mock_tests.rs:1:12
  |
1 | use crate::common::mock_runner::MockGitRunner;
  |            ^^^^^^ could not find `common` in the crate root

error[E0433]: failed to resolve: could not find `common` in the crate root
  --> tests\submodule\..\common\git_scenarios.rs:10:12
   |
10 | use crate::common::retry_matrix::{compute_backoff_sequence, PolicyOverride, RetryCase};
   |            ^^^^^^ could not find `common` in the crate root

error[E0433]: failed to resolve: could not find `common` in the crate root
 --> tests\submodule\..\common\http_override_stub.rs:5:12
  |
5 | use crate::common::git_scenarios::GitOp;
  |            ^^^^^^ could not find `common` in the crate root

error[E0432]: unresolved import `fireworks_collaboration_lib::core::git::runner::GitOutput`
 --> tests\submodule\..\common\mock_runner.rs:2:54
  |
2 | use fireworks_collaboration_lib::core::git::runner::{GitOutput, GitRunner};
  |                                                      ^^^^^^^^^
  |                                                      |
  |                                                      no `GitOutput` in `core::git::runner`
  |                                                      help: a similar name exists in the module: `Output`

error[E0432]: unresolved import `crate::common`
 --> tests\submodule\..\common\http_override_stub.rs:6:12
  |
6 | use crate::common::CaseDescribe;
  |            ^^^^^^ could not find `common` in the crate root

error[E0432]: unresolved import `crate::common`
  --> tests\submodule\..\common\partial_filter_matrix.rs:19:12
   |
19 | use crate::common::CaseDescribe;
   |            ^^^^^^ could not find `common` in the crate root

error[E0432]: unresolved import `crate::common`
  --> tests\submodule\..\common\retry_matrix.rs:12:12
   |
12 | use crate::common::CaseDescribe;
   |            ^^^^^^ could not find `common` in the crate root

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `common`
 --> tests\submodule\mod.rs:8:5
  |
8 | use common::test_env::init_test_env;
  |     ^^^^^^ use of unresolved module or unlinked crate `common`
  |
  = help: if you wanted to use a crate named `common`, use `cargo add common` to add it to your `Cargo.toml`

error[E0433]: failed to resolve: could not find `common` in the crate root
   --> tests\submodule\..\common\git_scenarios.rs:279:20
    |
279 |         use crate::common::retry_matrix::{retry_cases, BackoffKind};
    |                    ^^^^^^ could not find `common` in the crate root

error[E0433]: failed to resolve: could not find `common` in the crate root
   --> tests\submodule\..\common\http_override_stub.rs:188:20
    |
188 |         use crate::common::git_scenarios::GitOp;
    |                    ^^^^^^ could not find `common` in the crate root

error[E0432]: unresolved import `crate::common`
  --> tests\submodule\..\common\shallow_matrix.rs:17:12
   |
17 | use crate::common::CaseDescribe;
   |            ^^^^^^ could not find `common` in the crate root

error[E0433]: failed to resolve: could not find `common` in the crate root
   --> tests\submodule\..\common\partial_filter_matrix.rs:179:24
    |
179 |         let _ = crate::common::assert_unique_describe(&all);
    |                        ^^^^^^ could not find `common` in the crate root

error[E0433]: failed to resolve: could not find `common` in the crate root
   --> tests\submodule\..\common\retry_matrix.rs:178:29
    |
178 |         let _descs = crate::common::assert_unique_describe(&cases);
    |                             ^^^^^^ could not find `common` in the crate root

error[E0433]: failed to resolve: could not find `common` in the crate root
   --> tests\submodule\..\common\shallow_matrix.rs:180:24
    |
180 |         let _ = crate::common::assert_unique_describe(&cases);
    |                        ^^^^^^ could not find `common` in the crate root

error[E0433]: failed to resolve: could not find `common` in the crate root
   --> tests\submodule\..\common\shallow_matrix.rs:214:27
    |
214 |         let slug = crate::common::describe_slug(&case);
    |                           ^^^^^^ could not find `common` in the crate root

For more information about this error, try `rustc --explain E0432`.
error: could not compile `fireworks-collaboration` (test "e2e") due to 1 previous error
warning: build failed, waiting for other jobs to finish...
error: could not compile `fireworks-collaboration` (test "quality") due to 1 previous error
error: could not compile `fireworks-collaboration` (test "events") due to 1 previous error
Some errors have detailed explanations: E0432, E0433.
For more information about an error, try `rustc --explain E0432`.
error: could not compile `fireworks-collaboration` (test "submodule") due to 16 previous errors
error: could not compile `fireworks-collaboration` (test "workspace") due to 1 previous error
error: could not compile `fireworks-collaboration` (test "proxy") due to 1 previous error
error: could not compile `fireworks-collaboration` (test "git") due to 1 previous error
error: could not compile `fireworks-collaboration` (test "tasks") due to 1 previous error
